# co-op-translator

./: .dockerignore  .env.template  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  README_languages_template.md  SUPPORT.md  example.co-op-translator.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
.github/: ISSUE_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.MD  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml  language_support.yml
.github/workflows/: auto-translate.yml  ci.yml  co-op-review.yml  co-op-translator.yml  codeql.yml  docker-publish.yml  docs.yml  label-title-prefix.yml  labeler-pr.yml  python-publish.yml  scorecard.yml
data/bounding_boxes/: calligraphy.json  korean.json  microsoft1.json  microsoft2.json  microsoft3.json  microsoft4.json  screenshot_google_fonts.json
docs/: api.md  azure-ai-setup.md  cli.md  configuration.md  examples.md  github-actions.md  index.md  install-package.md  maintainer-guide.md  mcp.md  microsoft-beginners.md  privacy.md  readme-languages-template.md  repository-artifact-strategy.md  set-up-azure-resources.md  supported-languages.md  troubleshooting.md  use-co-op-translator.md  workflows.md
docs/javascripts/: i18n-navigation.js
docs/stylesheets/: extra.css
examples/github-actions/: co-op-translator.yml
getting_started/: Phi-3Cookbook-translation-case.md  README_languages_template.md  command-reference.md  create-env-file.md  install-package.md  markdown-only-mode.md  multi-language-support.md  set-up-azure-ai.md  set-up-azure-computer-vision.md  set-up-azure-openai.md  set-up-azure-resources.md  supported-languages.md  translator-your-project.md  troubleshooting.md  update-other-courses.md  use-co-op-translator.md
getting_started/command-line-guide/: command-line-guide.md  create-env-file.md  install-package.md  translator-your-project.md
getting_started/github-actions-guide/: github-actions-guide-ms.md  github-actions-guide-org.md  github-actions-guide-public.md  github-actions-guide.md
getting_started/set-up-resources/: set-up-azure-computer-vision.md  set-up-azure-openai.md
notebooks/bounding_boxes/: bicycle.json
src/co_op_translator/: __main__.py  mcp_entrypoint.py  optional_dependencies.py
test/: test_translation.md
tests/co_op_translator/: test_api.py  test_docs_consistency.py  test_docs_issue_45.py  test_mcp_server.py  test_review_api.py
translations/ar/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/bg/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/bn/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/br/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/cs/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/da/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/de/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/el/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/en/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/es/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/et/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/fa/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/fi/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/fr/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/he/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/hi/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/hk/: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/hr/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/hu/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/id/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/it/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/ja/: .co-op-translator.json  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_languages_template.md  SECURITY.md  SUPPORT.md
translations/km/: .co-op-translator.json  README.md
translations/kn/: .co-op-translator.json  AGENTS.md  README.md  (+4 more)
(+2110 files in other folders)
