[tool.poetry]
name = "co_op_translator"
version = "0.19.2"
description = "Easily automate the translation of your documentation into multiple languages to reach a global audience."
authors = [
    "Minseok Song <minseok.song@mssong.com>",
    "timothychungd <timothychungd@gmail.com>"
]
maintainers = [
    "Minseok Song <minseok.song@mssong.com>",
    "timothychungd <timothychungd@gmail.com>"
]
repository = "https://github.com/Azure/co-op-translator"
license = "MIT"
readme = "README.md"
keywords = ["translator", "translation","azure", "openai", "gpt"]
packages = [{ include = "co_op_translator", from = "src" }]
include = ["src/co_op_translator/fonts/*", "src/co_op_translator/templates/**/*"]
documentation = "https://azure.github.io/co-op-translator/"

[tool.poetry.scripts]
translate = "co_op_translator.__main__:main"
evaluate = "co_op_translator.__main__:main"
migrate-links = "co_op_translator.__main__:main"
co-op-review = "co_op_translator.__main__:main"
co-op-translator-mcp = "co_op_translator.mcp_entrypoint:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
azure-ai-vision-imageanalysis = { version = "^1.0.0b2", optional = true }
azure-cognitiveservices-vision-computervision = { version = "^0.9.0", optional = true }
azure-common = { version = "^1.1.28", optional = true }
azure-core = "^1.38.0"
certifi = "^2024.7.4"
charset-normalizer = "^3.3.2"
click = "^8.1.7"
distro = "^1.9.0"
fonttools = { version = "^4.53.0", optional = true }
h11 = "^0.16.0"
httpcore = "^1.0.5"
httpx = "^0.27.0"
idna = "^3.7"
isodate = "^0.6.1"
matplotlib = { version = "^3.9.0", optional = true }
msrest = { version = "^0.7.1", optional = true }
numpy = { version = "^1.25.2", optional = true }
oauthlib = "^3.2.2"
openai = ">=1.108.2,<2.0.0"
opencv-python = { version = "^4.10.0.82", optional = true }
packaging = "^24.1"
pillow = { version = ">=12.2.0,<13.0", optional = true }
pydantic = ">=2.11.0,<3.0.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
semantic_kernel = "^1.39.4"
six = "^1.16.0"
sniffio = "^1.3.1"
tiktoken = "^0.7.0"
tqdm = "^4.66.4"
typing_extensions = "^4.12.2"
urllib3 = "^2.2.1"
arabic-reshaper = { version = "^3.0.0", optional = true }
python-bidi = { version = "^0.6.6", optional = true }
az-ai-healthcheck = { version = "^0.1.7", extras = ["vision"], optional = true }
ai-healthcheck = "^0.1.2"
markdown-it-py = "^3.0.0"

[tool.poetry.extras]
image = [
    "arabic-reshaper",
    "az-ai-healthcheck",
    "azure-ai-vision-imageanalysis",
    "azure-cognitiveservices-vision-computervision",
    "azure-common",
    "fonttools",
    "matplotlib",
    "msrest",
    "numpy",
    "opencv-python",
    "pillow",
    "python-bidi",
]
full = [
    "arabic-reshaper",
    "az-ai-healthcheck",
    "azure-ai-vision-imageanalysis",
    "azure-cognitiveservices-vision-computervision",
    "azure-common",
    "fonttools",
    "matplotlib",
    "msrest",
    "numpy",
    "opencv-python",
    "pillow",
    "python-bidi",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ipykernel = "^6.29.4"
ipython = "^8.25.0"
jupyter_client = "^8.6.2"
jupyter_core = "^5.8.1"
nest-asyncio = "^1.6.0"
debugpy = "^1.8.1"
stack-data = "^0.6.3"
Pygments = "^2.18.0"
freezegun = "^1.5.1"
pytest-asyncio = "^0.26.0"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "integration"]
console_output_style = "progress"
filterwarnings = ["ignore::DeprecationWarning", "ignore::ResourceWarning"]
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["async_test", "api_key_required"]

[tool.coverage.run]
command_line = """
    -m pytest --ignore=tests/integration
    --cov --cov-report=term --cov-report=html
    --instafail -ra -n auto -m "not api_key_required"
"""
source = ["src/co_op_translator"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
sort = "Stmts"
skip_empty = true
show_missing = false
ignore_errors = true

[tool.coverage.html]
directory = "coverage"

[tool.ruff]
exclude = []
line-length = 120

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "skip"
disable_error_code = ["type-var"]
namespace_packages = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
